finished parallax for wallet

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <![endif]-->
 
 <div class="main-wrapper parallax-wrapper">
-<section class="section-hero parallax-section parallax bg1"> <img src="img/logo.png" alt="Wallor logo" class="logo">
+<section class="section-hero paralax-section parallax bg1"> <img src="img/logo.png" alt="Wallor logo" class="logo">
   <h1>The<br>
     Smartest<br>
     Global<br>
@@ -48,7 +48,7 @@
           Tracking </h1>
       </div>
     </div>
-    <div class="inner-content"> <img src="img/Wallet-shot1.png" alt="wallet">
+    <div class="inner-content"> <div class="parallax-section parallax bg2" src="img/Wallet-shot1.png" alt="wallet"></div>
       <p>Attach and connect our tracking chips to our system. Track anything you want,<br>
  <em><strong>keys, cards, passport, bag pack</strong></em></p>
     </div>
