tweaked parallax on wallet and phone images

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <section class="section-planner">
     <div class="wide-title">
-      <div class="inner-content">
+      <div class="inner-content"><div class="parallax-section parallax bg3" src="img/Wallet-shot1.png" alt="wallet"></div>
         <h1 class="right"> <strong>Smart</strong><br>
           Planner </h1>
       </div>
