finished phone mockup section and began working on gps section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
   <!-- /.section-ar --->
 
-  <section class="section-kickstarter"> <img src="img/kickstarter.jpg" alt="kickstarter"> </section>
+  <section class="section-kickstarter">
+    <img src="img/kickstarter.jpg" alt="kickstarter">
+  </section>
 
   <!-- /.section-kickstarter -->
 
@@ -49,8 +51,12 @@
       </div>
     </div>
     <div class="inner-content"> <div class="parallax-section parallax bg2" src="img/Wallet-shot1.png" alt="wallet"></div>
-      <p>Attach and connect our tracking chips to our system. Track anything you want,<br>
- <em><strong>keys, cards, passport, bag pack</strong></em></p>
+
+      <div >
+        <p class="right">Attach and connect our tracking chips to our system. Track anything you want,<br>
+        <em><strong>keys, cards, passport, bag pack</strong></em></p>
+      </div>
+
     </div>
   </section>
   <!-- /.section-tracking -->
@@ -58,13 +64,14 @@
   <section class="section-planner">
     <div class="wide-title">
       <div class="inner-content"><div class="parallax-section parallax bg3" src="img/Wallet-shot1.png" alt="wallet"></div>
-        <h1 class="right"> <strong>Smart</strong><br>
+        <h1 class="left"> <strong>Smart</strong><br>
           Planner </h1>
       </div>
     </div>
     <div class="inner-content">
-      <p>Plan your day ahead, make sure you don't leave anything behind</p>
-
+      <div class="text-box">
+        <p class="left">Plan your day ahead, make sure you don't leave anything behind</p>
+      </div>
 		<div class="planner">
 		<img src="img/Wallets-2.png" alt="wallet planner">
 		</div>
@@ -73,12 +80,14 @@
   <!-- /.section-planner -->
 
   <section class="section-gps">
-    <div class="inner-content"> <img src="img/Phone-side1.png" alt="iPhone Tracking">
-      <h1><strong>global</strong><br>
-        GPS</h1>
-      <p>Real-time worldwide<br>
-        GPS tracking<br>
-        <strong>NO EXTRA FEES</strong></p>
+    <div class="inner-content"> <div class="parallax-section parallax bg4"></div>
+      <div class="gps-content">
+        <h1 class="gps-title"><strong>GLOBAL</strong><br></h1>
+        <h2 class="gps-subtitle">GPS</h2>
+        <p>Real-time worldwide<br>
+          GPS tracking.<br>
+          <strong>NO EXTRA FEES</strong></p>
+      </div>
     </div>
     <!-- /.inner-content -->
   </section>
@@ -92,7 +101,7 @@
           <span>or battery</span> alerts</h1>
       </div>
     </div>
-    <div class="inner-content"> <img src="img/iphone-bg.png" alt="iPhone">
+    <div class="inner-content">
       <p>Left behind, battery alerts, <strong><em>don't forget your passport</em></strong></p>
     </div>
   </section>
