continued to fix styles on site

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
       <div class="text-box">
         <p class="left">Plan your day ahead, make sure you don't leave anything behind</p>
       </div>
-		<div class="planner">
-		<img src="img/Wallets-2.png" alt="wallet planner">
-		</div>
-       </div>
+  		<div class="planner">
+    		<!-- <img src="img/Wallets-2.png" alt="wallet planner"> -->
+  		</div>
+    </div>
   </section>
   <!-- /.section-planner -->
 
@@ -95,16 +95,23 @@
   <!--- /.section-gps -->
 
   <section class="section-alerts">
-    <div class="wide-title">
-      <div class="inner-content">
-        <h1><strong>distance</strong><br>
-          <span>or battery</span> alerts</h1>
-      </div>
-    </div>
     <div class="inner-content">
-      <p>Left behind, battery alerts, <strong><em>don't forget your passport</em></strong></p>
-    </div>
-  </section>
+      <div class="alert-half left-alert">
+        <div class="alert-titles">
+          <p>96PT<span class="alert-title1">DISTANCE</span>BLACK</p><br>
+          <p class="title-line1">72PT<span class="alert-title2">OR BATTERY</span>BLACK</p><br>
+          <p class="title-line2">48PT<span class="alert-title3">ALERTS</span>REGULAR</p>
+          </p>
+        </div>
+        <div class="alert-description-box">
+          Left behind, battery alerts, <strong><em>don't forget your passport</em></strong>
+        </div>
+      </div>
+      <!--Div to hold image -->
+      <div class="alert-half paralax-section parallax bg5"></div>
+  </div>
+
+</section>
   <!--- /.section-alerts -->
 
   <section class="section-kickstarter"> <img src="img/kickstarter.jpg" alt="kickstarter"> </section>
@@ -113,13 +120,19 @@
 
   <section class="section-leather"> <img src="img/wallet-shot2.png" alt="Wallet opened">
     <div class="inner-content">
-      <div class="half"> <i class="icon-leather-svgrepo-com"></i>
-        <h1>Perfectly integrated</h1>
-        <p>in Premium Leather</p>
+      <div class="half">
+        <i class="icon-leather-svgrepo-com"></i>
+        <div class="leather-words">
+          <h1>Perfectly integrated</h1>
+          <p class="subtitle">in Premium Leather</p>
+        </div>
       </div>
-      <div class="half"> <i class="icon-meter-svgrepo-com"></i>
-        <h1>Only 0.25"</h1>
-        <p>(8mm) thick</p>
+      <div class="half">
+        <i class="icon-meter-svgrepo-com"></i>
+        <div class="leather-words">
+          <h1>Only 0.25"</h1>
+          <p class="subtitle">(8mm) thick</p>
+        </div>
       </div>
     </div>
   </section>
