continued tweaking styles

--- a/index.html
+++ b/index.html
@@ -142,10 +142,13 @@
   <!-- /.section-parallax-wallet -->
 
   <section class="section-rfid">
-    <h1>RFID</h1>
-    <h2>Protection</h2>
-    <p>Not only we track, but we protect you against <strong><em>card skimming </em></strong> also</p>
-    <img src="img/Rfid.png" alt="RFID protection"> </section>
+    <div class="rfid-info">
+      <h1>RFID</h1>
+      <h2>Protection</h2>
+      <p>Not only we track, but we protect you against <strong><em>card skimming </em></strong> also</p>
+    </div>
+    <img src="img/Rfid.png" alt="RFID protection">
+  </section>
   <!-- /.section-rfid -->
 
   <section class="section-wireless-charging">
