creating responsive design, cleaning up styles

--- a/index.html
+++ b/index.html
@@ -137,17 +137,23 @@
     </div>
   </section>
   <!-- /.section-leather -->
-
+  <section class="section-wood">
+    <img class="img" src="img/wallet-shot2-wood.jpg">
+  </section>
   <section class="section-parallax-wallet"> </section>
   <!-- /.section-parallax-wallet -->
 
   <section class="section-rfid">
-    <div class="rfid-info">
-      <h1>RFID</h1>
-      <h2>Protection</h2>
-      <p>Not only we track, but we protect you against <strong><em>card skimming </em></strong> also</p>
+    <div class="rfid-content">
+      <div class="rfid-info">
+        <h1>RFID</h1>
+        <h2>PROTECTION</h2>
+        <p>Not only we track, but we protect you against <strong><em>card skimming </em></strong> also</p>
+      </div>
+      <div class="rfid-img">
+        <img src="img/Rfid.png" alt="RFID protection">
+      </div>
     </div>
-    <img src="img/Rfid.png" alt="RFID protection">
   </section>
   <!-- /.section-rfid -->
 
