switched to javascript parallax implementation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <![endif]-->
 
 <div class="main-wrapper parallax-wrapper">
-<section class="section-hero paralax-section parallax bg1"> <img src="img/logo.png" alt="Wallor logo" class="logo">
+<section class="section-hero paralax-section parallax bg1">
+  <img src="img/logo.png" alt="Wallor logo" class="logo">
+  
   <h1>The<br>
     Smartest<br>
     Global<br>
@@ -50,9 +52,8 @@
           Tracking </h1>
       </div>
     </div>
-    <div class="inner-content"> <div class="parallax-section parallax bg2" src="img/Wallet-shot1.png" alt="wallet"></div>
-
-      <div >
+    <div class="inner-content parallax-section parallax bg2">
+      <div>
         <p class="right">Attach and connect our tracking chips to our system. Track anything you want,<br>
         <em><strong>keys, cards, passport, bag pack</strong></em></p>
       </div>
@@ -63,12 +64,12 @@
 
   <section class="section-planner">
     <div class="wide-title">
-      <div class="inner-content"><div class="parallax-section parallax bg3" src="img/Wallet-shot1.png" alt="wallet"></div>
+      <div class="inner-content">
         <h1 class="left"> <strong>Smart</strong><br>
           Planner </h1>
       </div>
     </div>
-    <div class="inner-content">
+    <div class="inner-content  parallax-section parallax bg3">
       <div class="text-box">
         <p class="left">Plan your day ahead, make sure you don't leave anything behind</p>
       </div>
@@ -157,7 +158,7 @@
   </section>
   <!-- /.section-rfid -->
 
-  <section class="section-wireless-charging">
+  <section class="section-wirelesscharging">
     <h1>Wireless charging</h1>
     <h2>productivity</h2>
     <div class="phone-power"> Keep your phone powered up throughout the day </div>
@@ -220,6 +221,7 @@
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
+<script src="js/vendor/rellax.min.js"
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
