continued to work on styles

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <section class="section-gps">
     <div class="inner-content">
-      <img src="img/Phone-side1.png" alt="phone-side-1" class="rellax gps-phone-side" data-rellax-speed="-2.8">
+      <img src="img/Phone-side1.png" alt="phone-side-1" class="rellax gps-phone-side" data-rellax-speed="-2.">
       <div class="gps-content">
         <h1 class="gps-title"><strong>GLOBAL</strong><br></h1>
         <h2 class="gps-subtitle">GPS</h2>
@@ -97,18 +97,21 @@
 
   <section class="section-alerts">
     <div class="inner-content">
-      <div class="alert-half left-alert">
-        <div class="alert-titles">
-          <p>96PT<span class="alert-title1">DISTANCE</span>BLACK</p><br>
-          <p class="title-line1">72PT<span class="alert-title2">OR BATTERY</span>BLACK</p><br>
-          <p class="title-line2">48PT<span class="alert-title3">ALERTS</span>REGULAR</p>
-        </div>
-        <div class="alert-description-box">
-          Left behind, battery alerts, <strong><em>don't forget your passport</em></strong>
-        </div>
-      </div>
-      <!--Div to hold image -->
-      <div class="alert-half paralax-section parallax bg5"></div>
+           <div class="half">
+            <div class="titles">
+              <h1 class="alert-title1">DISTANCE</h1>
+              <h2 class="alert-title2">OR BATTERY</h2><br>
+              <h3 class="alert-title3">ALERTS</h3>
+            </div>
+            <div class="alert-description-box">
+              Left behind, battery alerts, <strong><em>don't forget your passport</em></strong>
+            </div>
+          </div>
+
+            <div class="half">
+              <img src="img/iphone-bg.png" alt="">
+            </div>
+
     </div>
   </section>
   <!--- /.section-alerts -->
