further cleaned styles, bug fixes

--- a/index.html
+++ b/index.html
@@ -116,25 +116,28 @@
   </section>
   <!--- /.section-alerts -->
 
-  <!-- <section class="section-kickstarter"> <img src="img/kickstarter.jpg" alt="kickstarter"> </section> -->
+  <section class="section-kickstarter"> <img src="img/kickstarter.jpg" alt="kickstarter"> </section>
 
   <!-- /.section-kickstarter -->
 
-  <section class="section-leather"> <img src="img/wallet-shot2.png" alt="Wallet opened">
+  <section class="section-leather">
     <div class="inner-content">
-      <div class="half">
+      <img src="img/wallet-shot2.png" alt="Wallet opened">
+      <div class="info-container">
+        <div class="half">
         <i class="icon-leather-svgrepo-com"></i>
         <div class="leather-words">
           <h1>Perfectly integrated</h1>
-          <p class="subtitle">in Premium Leather</p>
+          <p>in Premium Leather</p>
         </div>
       </div>
-      <div class="half">
+        <div class="half">
         <i class="icon-meter-svgrepo-com"></i>
         <div class="leather-words">
           <h1>Only 0.25"</h1>
           <p class="subtitle">(8mm) thick</p>
         </div>
+      </div>
       </div>
     </div>
   </section>
@@ -146,23 +149,31 @@
   <!-- /.section-parallax-wallet -->
 
   <section class="section-rfid">
-    <div class="rfid-content">
-      <div class="rfid-info">
+    <div class="inner-content">
+      <div class="half">
         <h1>RFID</h1>
         <h2>PROTECTION</h2>
         <p>Not only we track, but we protect you against <strong><em>card skimming </em></strong> also</p>
       </div>
-      <div class="rfid-img">
+      <div class="half">
         <img src="img/Rfid.png" alt="RFID protection">
       </div>
     </div>
   </section>
   <!-- /.section-rfid -->
 
-  <section class="section-wirelesscharging">
-    <h1>Wireless charging</h1>
-    <h2>productivity</h2>
-    <div class="phone-power"> Keep your phone powered up throughout the day </div>
+  <section class="section-wireless-charging">
+
+    <div class="inner-content">
+      <div class="header">
+        <h1>Wireless charging</h1>
+        <h2>productivity</h2>
+      </div>
+      <div class="phone-power">
+        <img src="" alt="">
+        Keep your phone powered up throughout the day
+      </div>
+    </div>
     <!-- /.phone-power -->
 
   </section>
