continued to polish styles

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
         <h2>productivity</h2>
       </div>
       <div class="phone-power">
-        <img src="" alt="">
-        Keep your phone powered up throughout the day
+        <img src="img/Wireless_charging_hero.jpg" alt="">
+        <div class="blockquote">Keep your phone powered up through the day</div>
       </div>
     </div>
     <!-- /.phone-power -->
@@ -180,10 +180,15 @@
   <!-- /.section-wireless-charging -->
 
   <section class="section-powerbank">
-    <h4>With our <em><strong>Fully detachable</strong></em> <strong>wireless</strong> charger <em><strong>powerbank</strong></em></h4>
-    <h1>Powerbank</h1>
-    <h2>FREEDOM</h2>
-    <img src="img/wallet-shot3.png" alt="Wallor Powerbank"> </section>
+    <div class="inner-content">
+      <div class="header">
+        <h4>With our <em><strong>Fully detachable</strong></em> <strong>wireless</strong> charger <em><strong>powerbank</strong></em></h4>
+      </div>
+      <h1>Powerbank</h1>
+      <h2>FREEDOM</h2>
+      <img src="img/wallet-shot3.png" alt="Wallor Powerbank">
+    </div>
+  </section>
   <!-- /.section-powerbank -->
 
   <section class="section-kickstarter"> <img src="img/kickstarter.jpg" alt="kickstarter"> </section>
