continued to fix styles, finished powerbank section

--- a/index.html
+++ b/index.html
@@ -184,8 +184,10 @@
       <div class="header">
         <h4>With our <em><strong>Fully detachable</strong></em> <strong>wireless</strong> charger <em><strong>powerbank</strong></em></h4>
       </div>
-      <h1>Powerbank</h1>
-      <h2>FREEDOM</h2>
+      <div class="blockquote">
+        <h1>Powerbank</h1>
+        <h2>FREEDOM</h2>
+      </div>
       <img src="img/wallet-shot3.png" alt="Wallor Powerbank">
     </div>
   </section>
