cleaned up styles

--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
   <!-- /.section-ar --->
 
   <section class="section-kickstarter">
-    <img src="img/kickstarter.jpg" alt="kickstarter">
+    <form action="https://www.getdrip.com/forms/583656187/submissions" method="post" data-drip-embedded-form="583656187">
+      <h3 data-drip-attribute="headline">Wallor 2.0 Kickstarter - Welcome</h3>
+      <div data-drip-attribute="description"></div>
+      <div>
+      <label for="drip-email">Email Address</label><br />
+      <input class="Input-text" type="email" id="drip-email" name="fields[email]" value="" />
+      </div>
+      <div>
+        <input class="submit" type="submit" value="Sign Up" data-drip-attribute="sign-up-button" />
+      </div>
+    </form>
   </section>
 
   <!-- /.section-kickstarter -->
@@ -116,7 +126,19 @@
   </section>
   <!--- /.section-alerts -->
 
-  <section class="section-kickstarter"> <img src="img/kickstarter.jpg" alt="kickstarter"> </section>
+  <section class="section-kickstarter">
+    <form action="https://www.getdrip.com/forms/583656187/submissions" method="post" data-drip-embedded-form="583656187">
+      <h3 data-drip-attribute="headline">Wallor 2.0 Kickstarter - Welcome</h3>
+      <div data-drip-attribute="description"></div>
+      <div>
+      <label for="drip-email">Email Address</label><br />
+      <input class="Input-text" type="email" id="drip-email" name="fields[email]" value="" />
+      </div>
+      <div>
+        <input class="submit" type="submit" value="Sign Up" data-drip-attribute="sign-up-button" />
+      </div>
+    </form>
+  </section>
 
   <!-- /.section-kickstarter -->
 
@@ -193,33 +215,49 @@
   </section>
   <!-- /.section-powerbank -->
 
-  <section class="section-kickstarter"> <img src="img/kickstarter.jpg" alt="kickstarter"> </section>
+  <section class="section-kickstarter">
+    <form action="https://www.getdrip.com/forms/583656187/submissions" method="post" data-drip-embedded-form="583656187">
+      <h3 data-drip-attribute="headline">Wallor 2.0 Kickstarter - Welcome</h3>
+      <div data-drip-attribute="description"></div>
+      <div>
+      <label for="drip-email">Email Address</label><br />
+      <input class="Input-text" type="email" id="drip-email" name="fields[email]" value="" />
+      </div>
+      <div>
+        <input class="submit" type="submit" value="Sign Up" data-drip-attribute="sign-up-button" />
+      </div>
+    </form>
+  </section>
+
 
   <!-- /.section-kickstarter -->
 
   <section class="section-kickstarter-testimonials">
-    <h1>Recommended by our <strong>Fully Successful delivered</strong> previous <strong>Kickstarter campaign</strong> backers</h1>
-    <div class="kickstarter-row">
-      <div class="inner-content"> <img src="img/01_duotone.png" alt="Kickstarter Backer">
-        <div class="kickstarter"> <span class="kickstarter-name"> Andy Dixon </span> <span class="kickstarter-backer">First time backer</span> <span class="kickstarter-member">Wallor member since 2012</span>
-          <p>Liquorice gingerbread muffin jelly beans. Oat cake carrot cake cake halvah gingerbread chocolate cake gummies. Powder chocolate caramels pastry liquorice danish. Apple pie danish cake muffin bonbon.</p>
+    <div class="wrapper">
+      <div class="header"><h1>Recommended by our <strong>Fully Successful delivered</strong> previous <strong>Kickstarter campaign</strong> backers</h1></div>
+      <hr>
+      <div class="kickstarter-row">
+        <div class="inner-content"> <img src="img/01_duotone.png" alt="Kickstarter Backer">
+          <div class="kickstarter"> <span class="kickstarter-name"> Andy Dixon </span> <span class="kickstarter-backer">First time backer</span> <span class="kickstarter-member">Wallor member since 2012</span>
+            <p>Liquorice gingerbread muffin jelly beans. Oat cake carrot cake cake halvah gingerbread chocolate cake gummies. Powder chocolate caramels pastry liquorice danish. Apple pie danish cake muffin bonbon.</p>
+          </div>
+          <!-- /.kickstarter-details -->
         </div>
-        <!-- /.kickstarter-details -->
+        <!-- /.inner-content -->
       </div>
-      <!-- /.inner-content -->
-    </div>
-    <!--- /.kickstarter-row -->
+      <!--- /.kickstarter-row -->
 
-    <div class="kickstarter-row grey-bg">
-      <div class="inner-content"> <img src="img/01_duotone.png" alt="Kickstarter Backer">
-        <div class="kickstarter"> <span class="kickstarter-name"> Andy Dixon </span> <span class="kickstarter-backer">First time backer</span> <span class="kickstarter-member">Wallor member since 2012</span>
-          <p>Liquorice gingerbread muffin jelly beans. Oat cake carrot cake cake halvah gingerbread chocolate cake gummies. Powder chocolate caramels pastry liquorice danish. Apple pie danish cake muffin bonbon.</p>
+      <div class="kickstarter-row grey-bg">
+        <div class="inner-content"> <img src="img/01_duotone.png" alt="Kickstarter Backer">
+          <div class="kickstarter"> <span class="kickstarter-name"> Andy Dixon </span> <span class="kickstarter-backer">First time backer</span> <span class="kickstarter-member">Wallor member since 2012</span>
+            <p>Liquorice gingerbread muffin jelly beans. Oat cake carrot cake cake halvah gingerbread chocolate cake gummies. Powder chocolate caramels pastry liquorice danish. Apple pie danish cake muffin bonbon.</p>
+          </div>
+          <!-- /.kickstarter-details -->
         </div>
-        <!-- /.kickstarter-details -->
+        <!-- /.inner-content -->
       </div>
-      <!-- /.inner-content -->
+      <!--- /.kickstarter-row -->
     </div>
-    <!--- /.kickstarter-row -->
   </section>
   <!-- /.section-kickstarter-testimonials-->
 
@@ -241,9 +279,9 @@
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/vendor/rellax.min.js"></script>
-<script>
+<!-- <script>
   var rallaxTracking = new Rellax('.rellax')
-</script>
+</script> -->
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
