--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
       <div class="kickstarter-row grey-bg">
         <div class="inner-content"> <img src="img/01_duotone.png" alt="Kickstarter Backer">
-          <div class="kickstarter"> <span class="kickstarter-name"> Andy Dixon </span> <span class="kickstarter-backer">First time backer</span> <span class="kickstarter-member">Wallor member since 2012</span>
+          <div class="kickstarter"> <span class="kickstarter-name"> Andy Dixon </span><span class="kickstarter-backer">First time backer</span> <span class="kickstarter-member">Wallor member since 2012</span>
             <p>Liquorice gingerbread muffin jelly beans. Oat cake carrot cake cake halvah gingerbread chocolate cake gummies. Powder chocolate caramels pastry liquorice danish. Apple pie danish cake muffin bonbon.</p>
           </div>
           <!-- /.kickstarter-details -->
@@ -266,9 +266,10 @@
       <h1>The Smartest Global Tracking System in the World</h1>
     </section>
     <!-- /.yellow-footer -->
-
-    <p>Tiramisu ice cream halvah bonbon. Topping cake cheesecake croissant gummies. Biscuit gingerbread oat cake fruitcake caramels caramels gummi bears. Halvah jujubes sweet chocolate.</p>
-    <p>&copy; 2018 Wallor Inc. All rights reserved.</p>
+    <div class="brown-footer">
+      <p>Tiramisu ice cream halvah bonbon. Topping cake cheesecake croissant gummies. Biscuit gingerbread oat cake fruitcake caramels caramels gummi bears. Halvah jujubes sweet chocolate.</p>
+      <p>&copy; 2018 Wallor Inc. All rights reserved.</p>
+    </div>
   </footer>
 </div>
 <!-- /.main-wrapper -->
