polished footer section, adding mobile breakpoints

--- a/index.html
+++ b/index.html
@@ -267,8 +267,10 @@
     </section>
     <!-- /.yellow-footer -->
     <div class="brown-footer">
-      <p>Tiramisu ice cream halvah bonbon. Topping cake cheesecake croissant gummies. Biscuit gingerbread oat cake fruitcake caramels caramels gummi bears. Halvah jujubes sweet chocolate.</p>
-      <p>&copy; 2018 Wallor Inc. All rights reserved.</p>
+      <div class="text-container">
+        <p>Tiramisu ice cream halvah bonbon. Topping cake cheesecake croissant gummies. Biscuit gingerbread oat cake fruitcake caramels caramels gummi bears. Halvah jujubes sweet chocolate.</p>
+        <p class="copywrite">&copy; 2018 Wallor Inc. All rights reserved.</p>
+      </div>
     </div>
   </footer>
 </div>
